Fix navigation overflow on small devices and certain browsers

--- a/sass/meta/sizes.sass
+++ b/sass/meta/sizes.sass
@@ -120,7 +120,9 @@ $footer-box-mobile: (padding: $gap-max $page-margin-mobile)
 // Header
 $header-bar-box: (height: 5em, padding: $gap-small $page-margin)
 $header-bar-box-mobile: (height: 3.75em, padding: $gap-small $page-margin-mobile)
-$header-button-box: (padding: 0 $gap-normal)
+$header-bar-logo-box: (min-width: 0)
+$header-button-box: (padding: 0 $gap-min)
+$header-button-font-size: $size-h4
 $header-link-box: (line-height: 2em)
 $header-overlay-box: (padding: $gap-small $page-margin-mobile)
 $header-overlay-font-size: $size-h2
